// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcBtn :props should render a <button> element with class "ec-btn--md" when size is set to md 1`] = `
<button
  class="ec-btn ec-btn--md"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a <button> element with class "ec-btn--sm" when size is set to sm 1`] = `
<button
  class="ec-btn ec-btn--sm"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a button with a spinner loader if loading is set to true 1`] = `
<button
  class="ec-btn ec-btn--md"
  disabled="disabled"
  type="submit"
>
  <!---->
   
  <!---->
   
  <div
    class="ec-loading ec-btn__loading-spinner"
    data-test="ec-btn__loading-spinner"
  >
    <div
      class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-loading__icon ec-icon"
        data-test="ec-loading__icon"
        height="22"
        width="22"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
     
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    />
  </div>
</button>
`;

exports[`EcBtn :props should render a button with an outline when "isOutline" is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--outline"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a button with category "error" when category "prop" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--error"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a button with category "primary" when category "prop" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--primary"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a button with category "secondary" when category "prop" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--secondary"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a button with category "success" when category "prop" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--success"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a button with category "warning" when category "prop" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--warning"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a button with only a loading spinner when loading is set to true and no slots are passed 1`] = `
<button
  class="ec-btn ec-btn--md"
  disabled="disabled"
  type="submit"
>
  <!---->
   
  <!---->
   
  <div
    class="ec-loading ec-btn__loading-spinner"
    data-test="ec-btn__loading-spinner"
  >
    <div
      class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-loading__icon ec-icon"
        data-test="ec-loading__icon"
        height="22"
        width="22"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
     
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    />
  </div>
</button>
`;

exports[`EcBtn :props should render a button with only an icon when the "icon" is defined but not the slots 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--icon-only"
  type="submit"
>
  <svg
    class="ec-btn__icon ec-icon"
    data-test="ec-btn__icon"
    height="22"
    width="22"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a button with type submit if submit is set to true 1`] = `
<button
  class="ec-btn ec-btn--md"
  submit="true"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a disabled button when "isDisabled" is set to true 1`] = `
<button
  class="ec-btn ec-btn--md"
  disabled="disabled"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a full width button when "isFullWidth" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--full-width"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a reversed button for the "error" category when "isReverse" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--error ec-btn--error-reverse"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a reversed button for the "primary" category when "isReverse" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--primary ec-btn--primary-reverse"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a reversed button for the "secondary" category when "isReverse" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--secondary ec-btn--secondary-reverse"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a reversed button for the "success" category when "isReverse" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--success ec-btn--success-reverse"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a reversed button for the "warning" category when "isReverse" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--warning ec-btn--warning-reverse"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a rounded button when the "isRounded" is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--rounded"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;

exports[`EcBtn :props should render a router link when we define the "to" prop 1`] = `
<router-link-stub
  class="ec-btn ec-btn--md"
  to="trade-finance"
>
  <!---->
   
  <!---->
   
  <!---->
</router-link-stub>
`;

exports[`EcBtn :props should render a router link with a custom tag when we define the "tag option" 1`] = `
<ebury-stub
  class="ec-btn ec-btn--md"
  to="trade-finance"
>
  <!---->
   
  <!---->
   
  <!---->
</ebury-stub>
`;

exports[`EcBtn :props should render an <a> element when we define the "href" prop 1`] = `
<a
  class="ec-btn ec-btn--md"
  href="https://ebury.com/"
>
  <!---->
   
  <!---->
   
  <!---->
</a>
`;

exports[`EcBtn :slots should render a button with "Click me!" text 1`] = `
<button
  class="ec-btn ec-btn--md"
  type="submit"
>
  <!---->
   
  <span
    class=""
    data-test="ec-btn__text"
  >
    Click Me!
  </span>
   
  <!---->
</button>
`;

exports[`EcBtn :slots should render a button with "Click me!" text and an icon 1`] = `
<button
  class="ec-btn ec-btn--md"
  type="submit"
>
  <svg
    class="ec-btn__icon ec-icon ec-btn__icon--with-spacing"
    data-test="ec-btn__icon"
    height="22"
    width="22"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
   
  <span
    class=""
    data-test="ec-btn__text"
  >
    Click Me!
  </span>
   
  <!---->
</button>
`;

exports[`EcBtn :slots should render a button with a loading-text and a loading spinner when "isLoading" is set to true and we set the default slot 1`] = `
<button
  class="ec-btn ec-btn--md"
  disabled="disabled"
  type="submit"
>
  <!---->
   
  <span
    class="ec-btn__text--is-loading"
    data-test="ec-btn__text"
  >
    Click Me!
  </span>
   
  <div
    class="ec-loading ec-btn__loading-spinner"
    data-test="ec-btn__loading-spinner"
  >
    <div
      class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-loading__icon ec-icon"
        data-test="ec-loading__icon"
        height="22"
        width="22"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
     
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    />
  </div>
</button>
`;

exports[`EcBtn :slots should render a custom loading text instead of a spinner when "text-loader" is set 1`] = `
<button
  class="ec-btn ec-btn--md"
  disabled="disabled"
  type="submit"
>
  <!---->
   
  <span
    data-test="ec-btn__loading-text"
  >
    Loading...
  </span>
   
  <!---->
</button>
`;

exports[`EcBtn should render a <button> element by default 1`] = `
<button
  class="ec-btn ec-btn--md"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
</button>
`;
